# cosmo-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  musl-debug-build.sh  package-release.sh
.github/workflows/: build.yaml  quality.yaml  release.yml
release_include_files/: setup.sh
src/: api.rs  cli.rs  lib.rs  main.rs
src/api/: http_server.rs  mod.rs
src/security/: firebase.rs  mod.rs  token_cacher.rs
src/services/: apikey_service.rs  mod.rs  organization_service.rs  project_service.rs
