[package]
name = "cosmo_cli"
version = "0.0.1"
description = "Easy Cosmo pipeline helper"
authors = [
    "banditopazzo <banditopazzo@gmail.com>",
    "Gianluigi <gianluigi@exein.io>",
]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "cosmo"

[dependencies]
log = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
async-trait = "0.1.53"
jsonwebtoken = "8"
reqwest = { version = "0.11.10", features = ["json", "multipart"] }
openssl = { version = '0.10.38' }
openssl-probe = "0.1.5"
anyhow = "1.0"
lazy_static = "1.4.0"
clap = { version = "3.1.10", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
serde_json = "1.0.79"
semver = { version = "1.0.7", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
term-table = "1.3.2"
rpassword = "6.0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
dirs = "4.0.0"
human-panic = "1.0.3"

[features]
default = []
vendored-openssl = ['openssl/vendored'] # Statically include openssl

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
