[package]
name = "cosmo-cli"
version = "0.3.0"
description = "Easy Cosmo pipeline helper"
authors = [
    "banditopazzo <banditopazzo@gmail.com>",
    "Gianluigi <gianluigi@exein.io>",
]
edition = "2021"
repository = "https://github.com/Exein-io/cosmo-cli.git"
homepage = "https://cosmo.exein.io"
license = "Apache-2.0"


[[bin]]
path = "src/main.rs"
name = "cosmo"

[dependencies]
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
async-trait = "0.1.57"
jsonwebtoken = "8.1.1"
reqwest = { version = "0.11.12", features = ["json", "multipart"] }
openssl = { version = '0.10.42' }
openssl-probe = "0.1.5"
anyhow = "1.0.65"
lazy_static = "1.4.0"
clap = { version = "3.1.10", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
serde_json = "1.0.86"
semver = { version = "1.0.14", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
term-table = "1.3.2"
rpassword = "6.0.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.1"
dirs = "4.0.0"
human-panic = "1.0.3"
openssl-src = "111.22"

[features]
default = []
vendored-openssl = ['openssl/vendored'] # Statically include openssl

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
strip = true
