[package]
name = "cosmo-cli"
version = "0.3.1"
description = "Easy Cosmo pipeline helper"
authors = [
    "banditopazzo <banditopazzo@gmail.com>",
    "Gianluigi <gianluigi@exein.io>",
]
edition = "2021"
repository = "https://github.com/Exein-io/cosmo-cli.git"
homepage = "https://cosmo.exein.io"
license = "Apache-2.0"


[[bin]]
path = "src/main.rs"
name = "cosmo"

[dependencies]
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
async-trait = "0.1.73"
reqwest = { version = "0.11.20", features = ["json", "multipart"] }
openssl = { version = '0.10.57' }
openssl-probe = "0.1.5"
anyhow = "1.0.75"
lazy_static = "1.4.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
semver = { version = "1.0.18", features = ["serde"] }
chrono = { version = "0.4.27", features = ["serde"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"
dirs = "5.0.1"
human-panic = "1.2.0"
clap = { version = "4.4.1", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
comfy-table = "7.0.1"
rust-ini = "0.19.0"

[features]
default = []
vendored-openssl = ['openssl/vendored'] # Statically include openssl

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
strip = true
